# artha

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac
build-aux/: ltmain.sh
data/: Makefile.am  Makefile.in  artha.1  artha.desktop  gui.glade
doc/: artha.docbook  build.sh
m4/: libtool.m4
src/: Makefile.am  Makefile.in  addons.h  app_icon.rc  eggaccelerators.c  eggaccelerators.h  gui.c  gui.h  hotkey_editor.c  hotkey_editor.h  instance_handler.c  instance_handler.h  libnotify.c  libnotify.h  libnotify_ver.rc  mod_notify.c  mod_notify.h  suggestions.c  suggestions.h  tomboyutil.c  tomboyutil.h  wni.c  wni.h
w32setup/: artha_setup.iss  directories.txt
